--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -30,8 +30,14 @@
   top: 50%;
   left: 50%;
 
-  width: 528px;
-  height: 581px;
+  max-width: 450px;
+  width: 100%;
+  height: 609px;
+
+  @include for-size(desktop) {
+    max-width: 528px;
+    height: 581px;
+  }
 
   background: $primary-white-color;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -120,10 +126,15 @@
   align-items: center;
 
   font-weight: 400;
-  font-size: 14px;
-  line-height: calc(24 / 14);
+  font-size: 12px;
+  line-height: calc(14 / 12);
 
   letter-spacing: 0.03em;
+
+  @include for-size(desktop) {
+    font-size: 14px;
+    line-height: calc(24 / 14);
+  }
 
   color: $primary-text-color;
 
@@ -211,4 +222,9 @@
 
   padding: 0;
   cursor: pointer;
+
+  &:hover,
+  &:focus {
+    fill: $accent-color;
+  }
 }
