--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -6,26 +6,6 @@
   }
 }
 
-.footer-conteiner {
-  padding-top: 60px;
-  padding-bottom: 60px;
-
-  @media screen and (max-width: 768px) {
-    text-align: center;
-  }
-
-  @include for-size(tablet) {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  @include for-size(desktop) {
-    align-items: baseline;
-    flex-wrap: nowrap;
-  }
-}
-
 .footer-contacts {
   @include for-size(desktop) {
     margin-right: 70px;
@@ -102,12 +82,21 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
+  @include for-size(tablet) {
+    text-align: center;
+  }
+
   color: $primary-white-color;
 
   margin-bottom: 20px;
 }
 .footer-form__input {
-  width: 358px;
+  width: 100%;
+
+  @include for-size(mobile) {
+    width: 450px;
+  }
+
   height: 50px;
 
   border: 1px solid rgba(255, 255, 255, 0.3);
