--- a/sass/components/_page-hero.scss
+++ b/sass/components/_page-hero.scss
@@ -2,31 +2,28 @@
   margin-left: auto;
   margin-right: auto;
 
-  max-width: 480px;
+  max-width: 16000px;
 
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../img/hero/hero-tel.jpg);
+  background-image: $linear-gradient, url(../img/hero/hero-tel.jpg);
 
   @include for-size(retina) {
-    background-image: url(../img/hero/hero-tel@2x.jpg);
+    background-image: $linear-gradient, url(../img/hero/hero-tel@2x.jpg);
   }
 
   @include for-size(tablet) {
-    max-width: 768px;
-    background-image: url(../img/hero/hero-tab.jpg);
+    background-image: $linear-gradient, url(../img/hero/hero-tab.jpg);
 
     @include for-size(retina) {
-      background-image: url(../img/hero/hero-tab@2.jpg);
+      background-image: $linear-gradient, url(../img/hero/hero-tab@2.jpg);
     }
   }
 
   @include for-size(desktop) {
-    max-width: 1600px;
     padding-top: 200px;
     padding-bottom: 200px;
-    background-image: url(../img/hero/hero.jpg);
+    background-image: $linear-gradient, url(../img/hero/hero.jpg);
     @include for-size(retina) {
-      background-image: url(../img/hero/hero@2x.jpg);
+      background-image: $linear-gradient, url(../img/hero/hero@2x.jpg);
     }
   }
 
