--- a/sass/base/_page-section.scss
+++ b/sass/base/_page-section.scss
@@ -21,8 +21,9 @@
 }
 
 .section__title {
-  font-size: 36px;
-  line-height: 42px;
+  font-size: 28px;
+  line-height: calc(33 / 28);
+
   text-align: center;
   letter-spacing: 0.03em;
 
@@ -30,6 +31,9 @@
 
   @include for-size(desktop) {
     margin-bottom: 50px;
+
+    font-size: 36px;
+    line-height: calc(42 / 36);
   }
   color: $primary-title-color;
 }
