--- a/sass/components/_header-menu.scss
+++ b/sass/components/_header-menu.scss
@@ -22,6 +22,13 @@
   @include for-size(tablet) {
     display: flex;
     align-items: center;
+    width: 100%;
+  }
+  @include for-size(tablet-only) {
+    margin-left: 87px;
+  }
+  @include for-size(desktop) {
+    margin-left: 92px;
   }
 }
 
