--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -7,6 +7,8 @@
   width: 100%;
   height: 100%;
 
+  padding: 0 15px;
+
   background-color: rgba(0, 0, 0, 0.2);
 
   opacity: 1;
@@ -25,8 +27,7 @@
 }
 
 .modal {
-  position: absolute;
-
+  position: relative;
   top: 50%;
   left: 50%;
 
