--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -1,23 +1,28 @@
 .footer {
   background-color: #2f303a;
 
+  padding-top: 60px;
+  padding-bottom: 60px;
+
   .logo {
     color: $primary-white-color;
   }
 }
 
 .footer-contacts {
+  @include for-size(mobile-only) {
+    margin-bottom: 60px;
+  }
+  @include for-size(tablet-only) {
+    text-align: center;
+  }
   @include for-size(desktop) {
-    margin-right: 70px;
+    flex-grow: 1;
   }
 }
 
 .address {
   margin-top: 20px;
-
-  @include for-size(mobile-only) {
-    margin-bottom: 60px;
-  }
 }
 
 .addres__item:not(:last-child) {
@@ -42,16 +47,6 @@
 }
 .footer__link--location {
   color: $primary-white-color;
-}
-
-.footer-contacts {
-  @include for-size(tablet) {
-    margin-right: 165px;
-
-    @include for-size(desktop) {
-      flex-grow: 1;
-    }
-  }
 }
 
 // form
@@ -82,7 +77,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
 
-  @include for-size(tablet) {
+  @include for-size(tablet-only) {
     text-align: center;
   }
 
@@ -90,11 +85,16 @@
 
   margin-bottom: 20px;
 }
+
 .footer-form__input {
   width: 100%;
 
   @include for-size(mobile) {
     width: 450px;
+  }
+
+  @include for-size(desktop) {
+    width: 358 px;
   }
 
   height: 50px;
