--- a/sass/components/_portfolio-card-set.scss
+++ b/sass/components/_portfolio-card-set.scss
@@ -3,7 +3,7 @@
   flex-wrap: wrap;
 
   flex-direction: column;
-  align-items: center;
+  // align-items: center;
 
   gap: 30px;
 
@@ -12,7 +12,7 @@
   }
 }
 .project__item {
-  max-width: 450px;
+  // max-width: 450px;
 
   @include for-size(tablet) {
     width: calc((100% - 30px) / 2);
@@ -27,6 +27,10 @@
 .card__link {
   display: block;
   transition: box-shadow 250ms $cubic-bezier;
+
+  flex-direction: column;
+  display: flex;
+  height: 100%;
 
   &:hover,
   &:focus {
@@ -78,6 +82,8 @@
   border-right: 1px solid #eeeeee;
 
   padding: 20px 24px;
+
+  flex-grow: 1;
 }
 .card__name {
   color: $primary-title-color;
@@ -96,4 +102,7 @@
   letter-spacing: 0.03em;
 
   color: $primary-text-color;
+}
+
+.card__img {
 }
