--- a/sass/utils/variables.scss
+++ b/sass/utils/variables.scss
@@ -8,3 +8,5 @@ $secondary-background-color: #f5f4fa;
 $icon-color: #afb1b8;
 
 $cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
+
+$linear-gradient: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4));
